# frontend_poc

./: .env.example  .gitignore  Dockerfile  README.md  bma_questions.csv  docker-compose.yaml  pyproject.toml  requirements.txt  streamlit.py  test_eval.ipynb
app/: __init__.py  main.py
app/services/: chat.py  chat_poc.py  endpoint.py  llm_calls.py  rag_service.py
app/utils/: models.py  system_prompts.py
frontend/: streamlit.py
scratch/: คู่มือการติดตั้งระบบเพื่อให้เครื่องผู้ใช้งานสามารถใช้เครื่องรูดบัตรได้_usb_install-image-placeholders-gemini.md  คู่มือการติดตั้งระบบเพื่อให้เครื่องผู้ใช้งานสามารถใช้เครื่องรูดบัตรได้_usb_install-image-placeholders-original.md  คู่มือการติดตั้งระบบเพื่อให้เครื่องผู้ใช้งานสามารถใช้เครื่องรูดบัตรได้_usb_install-image-refs-original.md  คู่มือการติดตั้งระบบเพื่อให้เครื่องผู้ใช้งานสามารถใช้เครื่องรูดบัตรได้_usb_install_final_with_captions.md  คู่มือการรับเงินจากเครื่อง EDC ด้วย QR Code-image-placeholders-gemini.md  คู่มือการรับเงินจากเครื่อง EDC ด้วย QR Code-image-placeholders-original.md  คู่มือการรับเงินจากเครื่อง EDC ด้วย QR Code-image-refs-original.md  คู่มือการรับเงินจากเครื่อง EDC ด้วย QR Code_final_with_captions.md
